--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 .fade {
     opacity: .8;
 }
+.hidden {
+    display: none;
+}
 /*---------------------------------
 	IMPORTS
 -----------------------------------*/
@@ -95,19 +98,26 @@ background:#fff;
 /* CONTENT */
 .content {
     float: right;
+    padding: 2em;
+    margin-right: -200px;
     background: #fff !important;
+	margin-top: 30px !important;
 }
 .content p {
     font-size: 12pt;
-    padding: 1.5em;;
     line-height: 1.4em;
     text-align: left;
 }
 /* NAV BAR*/
-.navbar{
+
+/*@media (min-width:700px) {
+    .navbar {
+    width: 280px !important;
+    }
+}*/
+.navbar {
 position:fixed;
 top:110px;
-left:0px;;
 background:#fff !important;
 color:#fff;
 z-index:1000;
@@ -143,23 +153,20 @@ border-radius: 20px 0px 0px 20px;
     padding: 0;
     width: 180px;
 	}
-
-		.navbar li{
-		margin:0;
-		padding:0;
-		list-style-type:0;
-		display:inline-block;
-		}
-
-		.navbar li a {
+    .navbar li{
+    margin:0;
+    padding:0;
+    list-style-type:0;
+    display:inline-block;
+    }
+    .navbar li a {
 		display:inline-block;
 		color:#efefef;
 		text-decoration:none;
 		text-transform: uppercase;
 		line-height:100%;
 		font-size: 2em;
-		}
-
+    }
 .callout{
 background:#4598ef;/*#86dc00;*/
 padding:3em 0;
@@ -187,7 +194,81 @@ border:5px solid #ddd;
 margin:30px 0;
 display:block;
 }
+@media only screen 
+and (max-width : 769px) {
 
+}
+@media only screen 
+and (max-width : 769px) {
+	.navbar {
+		left: 0px;
+        right: none;
+        top: -50px;
+        border-radius: 0;
+	}
+    .navbar ul {
+        display: inline;
+    }
+.navbar #logo {
+    width: 200px;
+}
+.navbar ul li {
+   padding: 0;
+    margin: -5px;
+}
+    .navbar ul li a {
+       font-size: .3em;
+        letter-spacing: .03em;
+        margin-bottom: 20px;
+ 
+    }
+}
+/* PAGES */
+/* PAGES - HOME*/
+#introheading {
+	font-family: 'primelight';
+	font-size: 3.3em;
+	line-height: 1.3em;
+	color: #e9ba00;
+    margin-top: -10px;
+}
+.introstrong {
+	font-family: 'primelight';
+	color: #7c6783;
+}
+.social {
+	height: 35px;
+	padding-left: 0;
+    padding-top: 15px;
+}
+.socialcontainer {
+	float: left;
+}
+.socialcontainer a {
+	color: #494949;
+	font-family: 'Helvetica Neue', helvetica, arial, sans-serif;
+	opacity: .7;
+	margin-left: 8px;
+	padding-right: 15px;
+}
+.social img {
+	float: left;
+	margin-top: -5px;
+}
+.social p {
+	float: right;
+	padding-top: 8px;
+	padding-left: 8px;
+	padding-right: 15px;
+}
+@media only screen 
+and (min-width : 770px) {
+	.navbar {
+		right: 71.5%;     
+        left: none;
+	}
+}
+   
 @font-face {
     font-family: 'primelight';
     src: url('fonts/prime_light-webfont.eot');
