--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ body{
 margin:0;
 padding:0 0 0 0;
 color:#000;
-background:#ffffff;
 font:normal 0.9em/150% 'Arimo', arial, verdana, sans-serif;
 text-shadow: 0 0 1px transparent; /* google font pixelation fix */
 }
@@ -96,11 +95,19 @@ background:#fff;
 	display:none;
 	}
 /* CONTENT */
+.introbox {
+}
+.box {
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
 .content {
     float: right;
+    background: #fff;
     padding: 2em;
     margin-right: -200px;
-    background: #fff !important;
 	margin-top: 30px !important;
 }
 .content p {
