--- a/style.css
+++ b/style.css
@@ -20,10 +20,16 @@
     right: 10px;
 }
 .hide {
-    display: none;
+    display: none !important;
 }
 .nudge {
     margin-top: -18px;
+}
+.nudgeup {
+    margin-top: -20px !important;
+}
+.nudgedown {
+    margin-top: 0px !important;
 }
 .nudge1 {
     padding-top: 10px;
@@ -56,6 +62,12 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"]{
 font-family: "Arimo", arial, verdana, sans-serif;
+}
+input[type="tel"] {
+    height: 40px;
+    width: 100%;
+    padding-left: 10px;
+    font-size: 13pt;
 }
 
 .menu{
@@ -102,10 +114,11 @@ top:0;
 left:0;
 background:#fff;
 }
-.nav
-
-ul li {
+.nav ul li {
     display: inline;
+}
+.col_9 {
+    width: 74.3333% !important;
 }
 .navbar ul li a {
     color: #000;
@@ -123,12 +136,6 @@ ul li {
     background: #cccccc;
 }
 /* NAV BAR*/
-
-/*@media (min-width:700px) {
-    .navbar {
-    width: 280px !important;
-    }
-}*/
 .navbar {
 position:fixed;
 top:110px;
@@ -138,11 +145,11 @@ z-index:1000;
 margin-left: 1.5em;
 padding: 0;
 opacity: .8;
+right: 72.7% !important;
 border-radius: 20px 0px 0px 20px;
 -moz-border-radius: 20px 0px 0px 20px;
 -webkit-border-radius: 20px 0px 0px 20px;
 }
-
 .navbar #logo{
 	position: block;
 	top:0;
@@ -160,6 +167,9 @@ span.pnavtitle  {
     color: #999;
     font-family: 'primelight';
     margin-left: 20px;
+}
+ul.portfolionav li.pnav  {
+    margin: -5px -6px !important;
 }
 
 .navbar ul{
@@ -225,6 +235,9 @@ span.pnavtitle  {
     padding-bottom: 20px;
     background-color:#E2E2E2;
     position: relative;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
 }
 .project-info {
     background: #fff;
@@ -237,6 +250,9 @@ span.pnavtitle  {
     position: absolute;
     right: 0px;
     top: 20px;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
 }
 img.portfoliophoto {
     height: 300px !important;
@@ -292,6 +308,7 @@ img.portfoliophoto {
     clear: both;
     line-height: 100%;
     position: relative;
+    border-radius: 4px;
 }
 .portfolio-section h1 {
     line-height: 1.2em;
@@ -327,6 +344,9 @@ img.portfoliophoto {
     padding: 3px;
     width: 100px;
     position: relative;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
 }
 .project-info .readmore:after {
     content: '>';
@@ -367,6 +387,9 @@ img.portfoliophoto {
     letter-spacing: .02em;
     font-size: 1.1em;
     color: #888;
+}
+.label_9 {
+    padding-lef: 5px;
 }
 .via h3 {
     font-size: 1.4em;
@@ -463,6 +486,10 @@ img.portfoliophoto {
 #about {
     margin-top: 100px !important;
 }
+#aboutmarker {
+    margin-top: 240px;
+    padding-top: 0px;
+}
 #header_8 {
     color: #fff;
 }
@@ -512,9 +539,20 @@ and (max-width : 950px) {
     left: 613px !important;
 }
  .portfolionav .icon-lightbulb-menu:before {
-    left: 712px !important;
+    left: 724px !important;
     top: 3px;
 }
+}
+@media only screen
+and (min-width : 600px) {
+    img.portfoliophoto {
+        -webkit-border-top-left-radius: 4px !important;
+        -webkit-border-bottom-left-radius: 4px !important;
+        -moz-border-radius-topleft: 4px !important;
+        -moz-border-radius-bottomleft: 4px !important;
+        border-top-left-radius: 4px !important;
+        border-bottom-left-radius: 4px !important;
+    }
 }
 @media only screen
 and (min-width : 600px) and (max-width : 826px) {
@@ -528,30 +566,44 @@ and (min-width : 600px) and (max-width : 826px) {
     margin-left: 20px !important;
     }
 .portfolionav .icon-refresh-menu:before {
-    left: 385px !important;
+    left: 400px !important;
     top: 5px;
 }
 .portfolionav .icon-print-menu:before {
-    left: 473px !important;
+    left: 515px !important;
     top: 3px;
 }
 .portfolionav .icon-laptop-menu:before {
-    left: 548px  !important;
+    left: 610px  !important;
     top: 4px;
 }
-.portfolionav .icon-lightbulb-menu:before {
-    left: 623px  !important;
-    top: 4px;
-}
+  .portfolionav .icon-lightbulb-menu:before {
+          left: 710px !important;
+    }
 .portfolionav .icon-print-menu:before, .portfolionav .icon-refresh-menu:before, .portfolionav .icon-laptop-menu:before, .portfolionav .icon-lightbulb-menu:before {
     font-size: 19px;
+}
+.portfolionav {
+    left: -65px !important;
 }
 }
 @media only screen
 and (min-width : 950px) and (max-width : 1024px) {
     .portfolionav .icon-lightbulb-menu:before {
-    left: 735px !important;
+    left: 748px !important;
     top: 3px;
+}
+}
+@media only screen
+and (min-width : 770px) and (max-width : 950px) {
+    .portfolionav .icon-laptop-menu:before {
+        left: 640px;
+    }
+    ul.mainnav li a {
+        font-size: .6em !important;
+    }
+.portfolionav {
+    left: -50px;
 }
 }
 @media only screen
@@ -562,6 +614,13 @@ and (max-width : 1024px) {
     }
 .box #stephen {
     height: 264px !important;
+}
+.selected2:after, .selected3:after {
+    margin-right: -20px;
+}
+.selected2, .selected3 {
+    background: none !important;
+    color: #E9BA00 !important;
 }
 .navbar ul {
     display: inline-block;
@@ -574,6 +633,9 @@ and (max-width : 1024px) {
     padding-left: 260px;     
     background: #fff;
     }
+.navbar ul li {
+    margin: 10px -5px !important;
+}
 .navbar {
     border-radius: 0px !important;
     width: 100%;
@@ -584,17 +646,38 @@ and (max-width : 1024px) {
     width: 100% !important;
 }
 .mainnav {
-    background: #ffffff  !important;; 
+    background: #ffffff  !important;
 }
 .portfolionav {
     background: #ffffff !important;
 }
+.portfolionav li a:hover {
+    color: #3a3a3a !important;
+    background: none !important;
+}
+.portfolionav li a.selected2:hover {
+    color: #E9BA00 !important;
+    background: none !important;
+}
+
 .pnavtitle {
     color: #CCCCCC;
     float: left;
     font-size: 12pt;
     margin-left: 20px;
-    margin-top: -30px;
+    margin-top: 5px;
+}
+.navbar ul.portfolionav li a {
+    margin: -40px 29px !important;
+    border-radius: 0px !important;
+    line-height: auto !important;
+    padding: 0 !important;  
+}
+.portfolionav .icon-print-menu:before, .portfolionav .icon-refresh-menu:before {
+     padding: 1px 0 0 15px !important;
+}
+.portfolionav .icon-laptop-menu:before {
+     left: 640px;
 }
 .portfolionav .icon-refresh-menu:before {
     left: 410px;
@@ -605,7 +688,11 @@ and (max-width : 1024px) {
     top: 3px;
 }
 .portfolionav .icon-laptop-menu:before {
-    left: 630px;
+    left: 620px !important;
+    top: 4px;
+}
+.portfolionav .icon-lightbulb-menu:before {
+    left: 730px;
     top: 4px;
 }
 .navbar ul li a {
@@ -630,7 +717,8 @@ and (max-width : 1024px) {
 .navbar #logo {
     color: #EFEFEF;
     font-size: 1.7em;
-    left: 0;
+    left: -15px;
+    width: 300px !important;
     padding: 0.25em;
     position: absolute;
     z-index: 1000;
@@ -659,7 +747,7 @@ and (max-width : 1022px) {
 
 }
 @media only screen 
-and (min-width : 769px) {
+and (min-width : 768px) {
 	.navbar {
 		left: 0px;
         right: none;
@@ -686,8 +774,17 @@ and (max-width : 1193px) {
     font-size: 11pt;
     line-height: 1.4em;
     margin-left: 40px;
-    text-align: left;
-    }    
+    text-align: left; 
+    }
+.navbar ul li a {
+        color: #888;
+       font-size: .5em;
+       letter-spacing: .03em;
+       margin-bottom: 16px;
+       padding: 10px 5px;
+       text-align: left;
+        margin-left: 15px;
+       
     }
 }
 
@@ -730,10 +827,30 @@ and (max-width : 1236px) {
     }
 }
 @media only screen 
-and (max-width : 1300px) {
+and (max-width : 1000px) {
     .availabilitybox {
     left: 0 !important;
     top: 200px;
+    }
+}
+@media only screen 
+and (max-width : 1000px) {
+    .availabilitybox {
+        margin-top: 50px;
+    }
+}
+@media only screen 
+and (min-width: 650px) {
+    #cid_7 {
+    float: right !important;
+    margin-top: -180px;
+}
+.phonelabel {
+    margin-top: -35px;
+}
+    .aboutlabel {
+    float: right !important;
+    margin-top: -220px;
     }
 }
 /* PAGES */
@@ -860,6 +977,68 @@ ul.resume li {
 .resume li {
     color: #494949 !important;
 }
+.form-all input[type="text"], .form-all input[type="email"] {
+     font-size: 1.6em;
+     border-radius: 7px;
+}
+#input_9 {
+    width: 260px !important;
+}
+.download_btn {
+	width: 180px;
+	height: 46px;
+	margin-top: 220px;
+	padding-top: 4px;
+	padding-right: 10px;
+    padding-left: 47px;
+	float: right;
+	text-align: center;
+	position: relative;
+    line-height: 1.2em;
+	color: #ffffff;
+	font-size: 11pt;
+	font-family:'primeregular', sans-serif;
+	text-shadow: 2px 2px 0px rgba(49, 35, 62, 1);
+	background: #877d93; /* Old browsers */
+	background: -moz-linear-gradient(top,  #877d93 0%, #877d93 52%, #594b64 53%, #594b64 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#877d93), color-stop(52%,#877d93), color-stop(53%,#594b64), color-stop(100%,#594b64)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #877d93 0%,#877d93 52%,#594b64 53%,#594b64 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #877d93 0%,#877d93 52%,#594b64 53%,#594b64 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #877d93 0%,#877d93 52%,#594b64 53%,#594b64 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #877d93 0%,#877d93 52%,#594b64 53%,#594b64 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#877d93', endColorstr='#594b64',GradientType=0 ); /* IE6-9 */
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	box-shadow: 0 -1px 0 0 #EEEDDF, 0 2px 0 0 #836387 inset, 0 -1px 0 0 #3a1164 inset;
+}
+.download_btn sub {
+    margin-top: -37px;
+    font-size: 8pt;
+}
+.download_btn:hover {
+	background: #877d93; /* Old browsers */
+	background: -moz-linear-gradient(top,  #878091 0%, #878091 52%, #6e617a 53%, #6e617a 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#878091), color-stop(52%,#878091), color-stop(53%,#6e617a), color-stop(100%,#6e617a)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #878091 0%,#878091 52%,#6e617a 53%,#6e617a 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #878091 0%,#878091 52%,#6e617a 53%,#6e617a 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #878091 0%,#878091 52%,#6e617a 53%,#6e617a 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #878091 0%,#878091 52%,#6e617a 53%,#6e617a 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#878091', endColorstr='#6e617a',GradientType=0 ); /* IE6-9 */
+	
+}
+.download_btn:active {
+	background: #675d75;
+}
+.download_btn:after {
+	content: '';
+	background: url(images/pdf.png);
+	height: 42px;
+	width: 42px;
+	position: absolute;
+	left: 3px;
+	top: 0px;
+}
 @media only screen 
 and (min-width : 770px) {
 	.navbar {
@@ -871,11 +1050,33 @@ and (min-width : 770px) {
         }
 }
 @media only screen 
-and (max-width : 1236px) {
+and (min-width : 708px) {
 	.navbar ul {
     margin-top: -10px !important;  
 	}
+#id_7 textarea {
+    width: 400px; 
+	}
 }
+@media only screen 
+and (min-width : 708px) {
+	#id_7 textarea {
+    width: 500px; 
+	}
+}
+@media only screen 
+and (max-width : 777px) {
+	#id_7 textarea {
+    width: auto; 
+	}
+}
+@media only screen
+and (min-width : 1400px) {
+    #id_7 textarea {
+        width: 600px;
+    }
+}
+
 @media only screen 
 and (max-width : 1205px) {
 	.content {
@@ -1137,7 +1338,7 @@ p.ptitle {
 .selected2 {
     background: #e0e0e0;
     opacity: .8;
-    color: #9d9d9d !important;
+    color: #9d9d9d;
     border-radius: 20px;
     font-weight: bold;
     -moz-border-radius: 20px;
@@ -1154,16 +1355,17 @@ p.ptitle {
     background: #e0e0e0;
     opacity: .8;
     color: #444444;
+    font-weight: bold;
     border-radius: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     transition: transform .2s ease-in-out;
 }
 .navbar li a:hover {
-    color: #fff !important;
+    color: #fff;
 }
 .selected:hover {
-    color: #fff !important;
+    color: #ffffff !important;
     background: #E9BA00 !important;
 }
 .selected-box {
@@ -1284,6 +1486,9 @@ margin-top: -35px;
     top: 3px;
     color: #fff;
 }
+
+/*Media Queries*/
+
 @font-face {
     font-family: 'web_symbolsregular';
     src: url('fonts/websymbols-regular.eot');
